# MotionDetection

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.B72FB825A0BC0BB4.idx
src/: main.cpp
